// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NavBar with routeButtons > should render with given state from Redux store 1`] = `
<div>
  <mock-appbar
    classname="NavBar-appBar-1"
    color="primary"
    position="static"
  >
    <mock-toolbar
      classname="NavBar-toolbar-4"
    >
      <mock-menudrawer
        open="false"
      />
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 css-ytge4g-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-7 MuiGrid-grid-sm-8 MuiGrid-grid-md-8 css-trwvdh-MuiGrid-root"
        >
          <mock-box
            alignitems="center"
            display="flex"
            flexwrap="nowrap"
          >
            <mock-link
              classname="NavBar-navBarLink-2"
              href="/"
              style="display: flex; align-items: center; margin-right: 2rem;"
              underline="none"
            >
              <mock-typography
                color="textPrimary"
                variant="h4"
              >
                Aquatic
              </mock-typography>
              <mock-typography
                style="color: rgb(162, 232, 221);"
                variant="h4"
              >
                AI
              </mock-typography>
            </mock-link>
            <mock-box
              alignitems="center"
              display="flex"
              style="gap: 1.5rem;"
            >
              <a
                data-discover="true"
                href="/"
                style="color: white; text-decoration: none; font-weight: 500; font-size: 16px;"
              >
                Home
              </a>
              <a
                data-discover="true"
                href="/map"
                style="color: white; text-decoration: none; font-weight: 500; font-size: 16px;"
              >
                Map
              </a>
              <a
                data-discover="true"
                href="/about"
                style="color: white; text-decoration: none; font-weight: 500; font-size: 16px;"
              >
                About
              </a>
              <a
                data-discover="true"
                href="/contact"
                style="color: white; text-decoration: none; font-weight: 500; font-size: 16px;"
              >
                Contact
              </a>
            </mock-box>
          </mock-box>
        </div>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-5 MuiGrid-grid-sm-4 MuiGrid-grid-md-4 NavBar-languageUserWrapper-12 css-p0cd6j-MuiGrid-root"
        >
          <mock-tooltip
            title="Translate"
          >
            <mock-iconbutton
              size="large"
              style="color: white;"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="LanguageIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2m6.93 6h-2.95c-.32-1.25-.78-2.45-1.38-3.56 1.84.63 3.37 1.91 4.33 3.56M12 4.04c.83 1.2 1.48 2.53 1.91 3.96h-3.82c.43-1.43 1.08-2.76 1.91-3.96M4.26 14C4.1 13.36 4 12.69 4 12s.1-1.36.26-2h3.38c-.08.66-.14 1.32-.14 2s.06 1.34.14 2zm.82 2h2.95c.32 1.25.78 2.45 1.38 3.56-1.84-.63-3.37-1.9-4.33-3.56m2.95-8H5.08c.96-1.66 2.49-2.93 4.33-3.56C8.81 5.55 8.35 6.75 8.03 8M12 19.96c-.83-1.2-1.48-2.53-1.91-3.96h3.82c-.43 1.43-1.08 2.76-1.91 3.96M14.34 14H9.66c-.09-.66-.16-1.32-.16-2s.07-1.35.16-2h4.68c.09.65.16 1.32.16 2s-.07 1.34-.16 2m.25 5.56c.6-1.11 1.06-2.31 1.38-3.56h2.95c-.96 1.65-2.49 2.93-4.33 3.56M16.36 14c.08-.66.14-1.32.14-2s-.06-1.34-.14-2h3.38c.16.64.26 1.31.26 2s-.1 1.36-.26 2z"
                />
              </svg>
            </mock-iconbutton>
          </mock-tooltip>
          <mock-box
            alignitems="center"
            display="flex"
            flexwrap="nowrap"
          >
            Mock User
            <mock-iconbutton
              classname="NavBar-button-11"
              size="large"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium NavBar-expandIcon-10 css-1umw9bq-MuiSvgIcon-root"
                data-testid="ExpandMoreIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                />
              </svg>
            </mock-iconbutton>
            <mock-menu
              classname="NavBar-userMenu-7"
              keepmounted="true"
              menulistprops="[object Object]"
              open="false"
              popoverclasses="[object Object]"
            >
              <mock-menuitem
                classname="NavBar-menuItem-8"
                disabled="true"
                style="opacity: 1; color: rgba(0, 0, 0, 0.87); font-weight: 500;"
              >
                Email: 
                mail@mail.com
              </mock-menuitem>
              <mock-divider
                classname="NavBar-userMenuDivider-6"
              />
              <mock-menuitem
                classname="NavBar-menuItem-8"
                disabled="true"
                style="opacity: 1; color: rgba(0, 0, 0, 0.87); font-weight: 500;"
              >
                Org: 
                Some organization
              </mock-menuitem>
              <mock-divider
                classname="NavBar-userMenuDivider-6"
              />
              <mock-menuitem
                classname="NavBar-menuItem-8"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 css-iqna23-MuiGrid-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item css-x7bhrq-MuiGrid-root"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
                      data-testid="PowerSettingsNewIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M13 3h-2v10h2zm4.83 2.17-1.42 1.42C17.99 7.86 19 9.81 19 12c0 3.87-3.13 7-7 7s-7-3.13-7-7c0-2.19 1.01-4.14 2.58-5.42L6.17 5.17C4.23 6.82 3 9.26 3 12c0 4.97 4.03 9 9 9s9-4.03 9-9c0-2.74-1.23-5.18-3.17-6.83"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item css-x7bhrq-MuiGrid-root"
                  >
                    Logout
                  </div>
                </div>
              </mock-menuitem>
            </mock-menu>
          </mock-box>
        </div>
      </div>
    </mock-toolbar>
  </mock-appbar>
  <mock-registerdialog
    open="false"
  />
  <mock-signindialog
    open="false"
  />
</div>
`;

exports[`NavBar without routeButtons > should render with given state from Redux store 1`] = `
<div>
  <mock-appbar
    classname="NavBar-appBar-13"
    color="primary"
    position="static"
  >
    <mock-toolbar
      classname="NavBar-toolbar-16"
    >
      <mock-menudrawer
        open="false"
      />
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 css-ytge4g-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-7 MuiGrid-grid-sm-8 MuiGrid-grid-md-8 css-trwvdh-MuiGrid-root"
        >
          <mock-box
            alignitems="center"
            display="flex"
            flexwrap="nowrap"
          >
            <mock-link
              classname="NavBar-navBarLink-14"
              href="/"
              style="display: flex; align-items: center; margin-right: 2rem;"
              underline="none"
            >
              <mock-typography
                color="textPrimary"
                variant="h4"
              >
                Aquatic
              </mock-typography>
              <mock-typography
                style="color: rgb(162, 232, 221);"
                variant="h4"
              >
                AI
              </mock-typography>
            </mock-link>
            <mock-box
              alignitems="center"
              display="flex"
              style="gap: 1.5rem;"
            >
              <a
                data-discover="true"
                href="/"
                style="color: white; text-decoration: none; font-weight: 500; font-size: 16px;"
              >
                Home
              </a>
              <a
                data-discover="true"
                href="/map"
                style="color: white; text-decoration: none; font-weight: 500; font-size: 16px;"
              >
                Map
              </a>
              <a
                data-discover="true"
                href="/about"
                style="color: white; text-decoration: none; font-weight: 500; font-size: 16px;"
              >
                About
              </a>
              <a
                data-discover="true"
                href="/contact"
                style="color: white; text-decoration: none; font-weight: 500; font-size: 16px;"
              >
                Contact
              </a>
            </mock-box>
          </mock-box>
        </div>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-5 MuiGrid-grid-sm-4 MuiGrid-grid-md-4 NavBar-languageUserWrapper-24 css-p0cd6j-MuiGrid-root"
        >
          <mock-tooltip
            title="Translate"
          >
            <mock-iconbutton
              size="large"
              style="color: white;"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="LanguageIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2m6.93 6h-2.95c-.32-1.25-.78-2.45-1.38-3.56 1.84.63 3.37 1.91 4.33 3.56M12 4.04c.83 1.2 1.48 2.53 1.91 3.96h-3.82c.43-1.43 1.08-2.76 1.91-3.96M4.26 14C4.1 13.36 4 12.69 4 12s.1-1.36.26-2h3.38c-.08.66-.14 1.32-.14 2s.06 1.34.14 2zm.82 2h2.95c.32 1.25.78 2.45 1.38 3.56-1.84-.63-3.37-1.9-4.33-3.56m2.95-8H5.08c.96-1.66 2.49-2.93 4.33-3.56C8.81 5.55 8.35 6.75 8.03 8M12 19.96c-.83-1.2-1.48-2.53-1.91-3.96h3.82c-.43 1.43-1.08 2.76-1.91 3.96M14.34 14H9.66c-.09-.66-.16-1.32-.16-2s.07-1.35.16-2h4.68c.09.65.16 1.32.16 2s-.07 1.34-.16 2m.25 5.56c.6-1.11 1.06-2.31 1.38-3.56h2.95c-.96 1.65-2.49 2.93-4.33 3.56M16.36 14c.08-.66.14-1.32.14-2s-.06-1.34-.14-2h3.38c.16.64.26 1.31.26 2s-.1 1.36-.26 2z"
                />
              </svg>
            </mock-iconbutton>
          </mock-tooltip>
          <mock-box
            alignitems="center"
            display="flex"
            flexwrap="nowrap"
          >
            Mock User
            <mock-iconbutton
              classname="NavBar-button-23"
              size="large"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium NavBar-expandIcon-22 css-1umw9bq-MuiSvgIcon-root"
                data-testid="ExpandMoreIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                />
              </svg>
            </mock-iconbutton>
            <mock-menu
              classname="NavBar-userMenu-19"
              keepmounted="true"
              menulistprops="[object Object]"
              open="false"
              popoverclasses="[object Object]"
            >
              <mock-menuitem
                classname="NavBar-menuItem-20"
                disabled="true"
                style="opacity: 1; color: rgba(0, 0, 0, 0.87); font-weight: 500;"
              >
                Email: 
                mail@mail.com
              </mock-menuitem>
              <mock-divider
                classname="NavBar-userMenuDivider-18"
              />
              <mock-menuitem
                classname="NavBar-menuItem-20"
                disabled="true"
                style="opacity: 1; color: rgba(0, 0, 0, 0.87); font-weight: 500;"
              >
                Org: 
                Some organization
              </mock-menuitem>
              <mock-divider
                classname="NavBar-userMenuDivider-18"
              />
              <mock-menuitem
                classname="NavBar-menuItem-20"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 css-iqna23-MuiGrid-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item css-x7bhrq-MuiGrid-root"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
                      data-testid="PowerSettingsNewIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M13 3h-2v10h2zm4.83 2.17-1.42 1.42C17.99 7.86 19 9.81 19 12c0 3.87-3.13 7-7 7s-7-3.13-7-7c0-2.19 1.01-4.14 2.58-5.42L6.17 5.17C4.23 6.82 3 9.26 3 12c0 4.97 4.03 9 9 9s9-4.03 9-9c0-2.74-1.23-5.18-3.17-6.83"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item css-x7bhrq-MuiGrid-root"
                  >
                    Logout
                  </div>
                </div>
              </mock-menuitem>
            </mock-menu>
          </mock-box>
        </div>
      </div>
    </mock-toolbar>
  </mock-appbar>
  <mock-registerdialog
    open="false"
  />
  <mock-signindialog
    open="false"
  />
</div>
`;
